SotA: Make each scenario have the expected recruit if change level is used

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -113,7 +113,8 @@ With further observation, I have determined that this is probably not the way to
 
     [side]
         # wmllint: who SIDE_1_ARDONNA is Ardonna
-        {SIDE_1_ARDONNA_EARLY}
+        {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_1}
         facing=se
         {GOLD 15 5 0}
         fog=yes
