--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
@@ -52,7 +52,8 @@ I decided to hide in the cemetery. That way I could try my experiment to animate
     {TURNS 18 18 18}
 
     [side]
-        {SIDE_1_ARDONNA_EARLY}
+        {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_1}
         {GOLD 50 40 30}
         facing=se
         # The scenario won't be shrouded, but some of the intro dialog is:
