--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/03_Bandits.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/03_Bandits.cfg
@@ -27,7 +27,8 @@ Even with the delay at the graveyard, I reached the outskirts of Llorvin at firs
     {TURNS 35 35 35}
 
     [side]
-        {SIDE_1_ARDONNA_EARLY}
+        {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_2}
         {GOLD 150 150 140}
     [/side]
 
