--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
@@ -89,7 +89,8 @@ The journey started well enough, but on the dawn following our departure, the wi
     {TURNS 14 15 16}
 
     [side]
-        {SIDE_1_ARDONNA_EARLY}
+        {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_3}
         # We are assuming substantial gold from the previous scenario:
         {GOLD 60 40 20}
         facing=ne
@@ -447,10 +448,7 @@ The journey started well enough, but on the dawn following our departure, the wi
             time=1000
         [/delay]
 
-        [allow_recruit]
-            side=1
-            type=Ghoul
-        [/allow_recruit]
+        # Ghoul added to side recruit this scenario
         [message]
             speaker=narrator
             image=portraits/undead/ghoul.png~SCALE(93, 93)
