--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
@@ -42,7 +42,8 @@ When the captain retained his memories, I reasoned that it may have been because
     {TURNS 28 28 28}
 
     [side]
-        {SIDE_1_ARDONNA_EARLY}
+        {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_3}
         {GOLD 270 230 200}
         income=6
         facing=se
