--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
@@ -25,6 +25,7 @@ The tunnel at the back of the cave narrowed and ran on for quite some time. Patc
 
     [side]
         {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_3}
         shroud=yes
         gold=0
     [/side]
