--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
@@ -46,6 +46,7 @@ After several days of travel, he approached the frontier town of Carcyn."
     [side]
         # wmllint: who SIDE_1_RAS-TABAHN is Ras-Tabahn
         {SIDE_1_RAS-TABAHN}
+        {RAS-TABAHN_RECRUIT_1}
         {GOLD 200 200 200}
     [/side]
 
@@ -436,8 +437,8 @@ After several days of travel, he approached the frontier town of Carcyn."
                     message= _ "You can now recruit dark adepts!"
                 [/message]
                 # This message is actually a lie. DA recruitment is not added
-                # until the end of the next scenario. We don't want the
-                # automatically-recruited DA's there to be able to recruit more.
+                # until the start of the scenario after the next one. We don't want the
+                # automatically-recruited DA's in the next scenario to be able to recruit more.
                 [clear_variable]
                     name=side_2_limited_recruits,side_2_limited_recruits_length
                 [/clear_variable]
