--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -53,6 +53,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
 
     [side]
         {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_3}
         gold=0
         # Gold is not set here because if Ardonna's gold is higher, it will replace
         # this value anyway (because of the original bonus rules). If we use zero,
@@ -176,11 +177,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
             image=portraits/undead/ghost.png~SCALE(93, 93)
             message= _ "You can now recruit ghosts!"
         [/message]
-
-        [allow_recruit]
-            side=1
-            type=Ghost
-        [/allow_recruit]
+        # Ghosts added to recruit start of next scenario
 
         # Find the nearest hex to (16,4) that doesn't have unit on it:
         {NEAREST_HEX 16 4 20 (
