--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/12_Walking_Trees.cfg
@@ -32,6 +32,7 @@ My primary objective was met, and I had been able to press a number of ghosts in
 
     [side]
         {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_4}
         {GOLD 200 190 180}
     [/side]
 
