--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
@@ -25,6 +25,7 @@ I never would have been able to escape the trees without ghosts. They had proven
 
     [side]
         {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_4}
         gold=0
     [/side]
 
@@ -203,12 +204,8 @@ I never would have been able to escape the trees without ghosts. They had proven
             time=1000
         [/delay]
 
-        # Now that Ardonna is the leader again, we need to add DAs to her list, and
-        # maybe Chocobones too:
-        [allow_recruit]
-            side=1
-            type=SotA Dark Adept
-        [/allow_recruit]
+        # Now that Ardonna is the leader again, DA's are added to her list start of next scenario.
+        # Add Chocobones now if the bones were already found.
         [if]
             [variable]
                 name=bird_bones_found
