--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-sota
 
-#define SIDE_1_ARDONNA_BASE
+#define SIDE_1_ARDONNA
     side=1
     controller=human
     team_name=good
@@ -19,14 +19,20 @@
     {FLAG_VARIANT undead}
 #enddef
 
-#define SIDE_1_ARDONNA
-    {SIDE_1_ARDONNA_BASE}
+#define ARDONNA_RECRUIT_1
     recruit=Vampire Bat
 #enddef
 
-#define SIDE_1_ARDONNA_EARLY
-    {SIDE_1_ARDONNA_BASE}
-    recruit=Vampire Bat
+#define ARDONNA_RECRUIT_2
+    recruit=Vampire Bat,Skeleton,Skeleton Archer
+#enddef
+
+#define ARDONNA_RECRUIT_3
+    recruit=Vampire Bat,Skeleton,Skeleton Archer,Ghoul
+#enddef
+
+#define ARDONNA_RECRUIT_4
+    recruit=Vampire Bat,Skeleton,Skeleton Archer,Ghoul,Ghost
 #enddef
 
 #define SIDE_1_RAS-TABAHN
@@ -34,7 +40,7 @@
     controller=human
     team_name=good
     user_team_name= _ "Ras-Tabahn"
-     # This type of Dark Sorcerer advances to a Necromancer with a custom plague
+    # This type of Dark Sorcerer advances to a Necromancer with a custom plague
     # attack, and cannot advance to a Lich.
     type=SotA Dark Sorcerer
     id=Ras-Tabahn
@@ -44,8 +50,15 @@
         {TRAIT_STRONG}
         {TRAIT_INTELLIGENT}
     [/modifications]
-    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer
     {FLAG_VARIANT undead}
+#enddef
+
+#define RAS-TABAHN_RECRUIT_1
+    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer
+#enddef
+
+#define RAS-TABAHN_RECRUIT_2
+    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer,SotA Dark Adept
 #enddef
 
 #define SIDE_1_BOTH
@@ -66,7 +79,7 @@
         {TRAIT_RESILIENT}
     [/modifications]
     {FLAG_VARIANT undead}
-    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer
+    recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer,SotA Dark Adept,Ghoul,Vampire Bat
 #enddef
 
 #define RECALL_LOYAL_UNITS
