--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
@@ -60,6 +60,7 @@ I was so sure I had the answer! I was wrong. I wanted to believe that I was imag
 
     [side]
         {SIDE_1_ARDONNA}
+        {ARDONNA_RECRUIT_3}
         {GOLD 200 175 150}
         shroud=yes
     [/side]
