SotA: Use character macros for change level compatability and cleaner code

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
@@ -606,16 +606,11 @@ The journey started well enough, but on the dawn following our departure, the wi
             kill=yes
         [/store_unit]
         [unit]
-            type=Bone Captain
-            id=Bone Captain
+            # wmllint: who CHARACTER_STATS_BONE_CAPTAIN is Bone Captain
+            {CHARACTER_STATS_BONE_CAPTAIN}
             side=1
             x=$rudic_stored.x
             y=$rudic_stored.y
-            name= _ "Rudic"
-            {IS_LOYAL}
-            [modifications]
-                {TRAIT_LOYAL}
-            [/modifications]
             animate=yes
         [/unit]
         [clear_variable]
