--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/05_Blackwater.cfg
@@ -47,6 +47,10 @@ When the captain retained his memories, I reasoned that it may have been because
         {GOLD 270 230 200}
         income=6
         facing=se
+        [unit]
+            {CHARACTER_STATS_BONE_CAPTAIN}
+            placement=leader
+        [/unit]
     [/side]
 
     {STARTING_VILLAGES 2 6}
@@ -152,8 +156,6 @@ When the captain retained his memories, I reasoned that it may have been because
             value=0
         [/set_variable]
 #endif
-
-        {RECALL_LOYAL_UNITS}
 
         # This object will keep the knight from attacking from terrible terrain,
         # which he will otherwise.
