--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
@@ -245,18 +245,10 @@ After several days of travel, he approached the frontier town of Carcyn."
             y=12,12
         [/move_unit_fake]
         [unit]
+            # wmllint: who CHARACTER_STATS_SHYNAL is Shynal
+            {CHARACTER_STATS_SHYNAL}
             x,y=5,12
-            type=Delinquent
             side=1
-            name= _ "Shynal"
-            id=Shynal
-            gender=female
-            {IS_LOYAL}
-            [modifications]
-                {TRAIT_LOYAL}
-                {TRAIT_RESILIENT}
-            [/modifications]
-            profile="portraits/shynal-outlaw.png"
         [/unit]
         [move_unit_fake]
             type=Ruffian
@@ -265,16 +257,10 @@ After several days of travel, he approached the frontier town of Carcyn."
             y=12,13
         [/move_unit_fake]
         [unit]
+            # wmllint: who CHARACTER_STATS_CARCYN is Carcyn
+            {CHARACTER_STATS_CARCYN}
             x,y=5,13
-            type=SotA Ruffian
             side=1
-            name= _ "Carcyn"
-            id=Carcyn
-            {IS_LOYAL}
-            [modifications]
-                {TRAIT_LOYAL}
-                {TRAIT_STRONG}
-            [/modifications]
         [/unit]
         [message]
             speaker=Carcyn
