--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -195,17 +195,11 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
         [/move_unit_fake]
 
         [unit]
-            name= _ "Vendraxis"
-            id=Vendraxis
-            type=Saurian Soothsayer
+            # wmllint: who CHARACTER_STATS_VENDRAXIS is Vendraxis
+            {CHARACTER_STATS_VENDRAXIS}
             x=$location.x
             y=$location.y
             side=1
-            {IS_LOYAL}
-            [modifications]
-                {TRAIT_LOYAL}
-                {TRAIT_RESILIENT}
-            [/modifications]
         [/unit]
 
         [clear_variable]
