--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/18_Abandoned_Outpost.cfg
@@ -219,10 +219,14 @@ Now the process is complete for both of us. I posted a guard so nothing could ha
 
         # We aren't using the normal macro for the following recalls because it
         # doesn't specify locations, and that's important this time.
-        [recall]
-            id=Ras-Tabahn
+        # Ras-Tabahn is already on the map, so move him
+        [teleport]
+            [filter]
+                id=Ras-Tabahn
+            [/filter]
             x,y=44,11
-        [/recall]
+            animate=no
+        [/teleport]
         [recall]
             id=Carcyn
             x,y=44,11
