--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -5,17 +5,7 @@
     controller=human
     team_name=good
     user_team_name= _ "Ardonna"
-    # This type of Dark Adept cannot eventually advance to a lich.
-    type=SotA Dark Adept
-    id=Ardonna
-    profile=portraits/ardonna.png
-    gender=female
-    name= _ "Ardonna"
-    canrecruit=yes
-    [modifications]
-        {TRAIT_QUICK}
-        {TRAIT_RESILIENT}
-    [/modifications]
+    {CHARACTER_STATS_ARDONNA}
     {FLAG_VARIANT undead}
 #enddef
 
@@ -40,16 +30,7 @@
     controller=human
     team_name=good
     user_team_name= _ "Ras-Tabahn"
-    # This type of Dark Sorcerer advances to a Necromancer with a custom plague
-    # attack, and cannot advance to a Lich.
-    type=SotA Dark Sorcerer
-    id=Ras-Tabahn
-    name= _ "Ras-Tabahn"
-    canrecruit=yes
-    [modifications]
-        {TRAIT_STRONG}
-        {TRAIT_INTELLIGENT}
-    [/modifications]
+    {CHARACTER_STATS_RAS-TABAHN}
     {FLAG_VARIANT undead}
 #enddef
 
@@ -78,6 +59,10 @@
         {TRAIT_QUICK}
         {TRAIT_RESILIENT}
     [/modifications]
+    [unit]
+        {CHARACTER_STATS_RAS-TABAHN}
+        placement=leader
+    [/unit]
     {FLAG_VARIANT undead}
     recruit=SotA Walking Corpse_Dummy,Ghost,Skeleton,Skeleton Archer,SotA Dark Adept,Ghoul,Vampire Bat
 #enddef
@@ -102,10 +87,6 @@
     [/recall]
     [recall]
         id=Vendraxis
-        show=no
-    [/recall]
-    [recall]
-        id=Ras-Tabahn
         show=no
     [/recall]
 #enddef
