SotA: Simplify handling of ally units, recall storing, & merging
Allows greater compatibilty with change level as well.

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/07_Meeting_of_the_Minds.cfg
@@ -32,16 +32,18 @@ The tunnel at the back of the cave narrowed and ran on for quite some time. Patc
 
     [side]
         side=2
-        controller=ai
+        controller=human # sets persistent so the units here will be on the recall list in next scenario
         team_name=good
         user_team_name= _ "Ras-Tabahn"
         # wmllint: who CHARACTER_STATS_RAS-TABAHN is Ras-Tabahn
         {CHARACTER_STATS_RAS-TABAHN}
+        {RAS-TABAHN_RECRUIT_1}
+        gold=0
         color=darkred
         facing=sw
         [unit]
             type=Shadow
-            id=Shadow
+            name= _ "Vash-Gorn"
             x,y=11,7
             facing=nw
         [/unit]
