--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/13_Together_Again.cfg
@@ -29,18 +29,21 @@ I never would have been able to escape the trees without ghosts. They had proven
         gold=0
     [/side]
 
+    [side]
+        side=2
+        controller=human
+        team_name=good
+        user_team_name= _ "Ras-Tabahn"
+        {CHARACTER_STATS_RAS-TABAHN}
+        {RAS-TABAHN_RECRUIT_2}
+        gold=0
+    [/side]
+
     [event]
         name=prestart
 
-        [for]
-            array=rastabahn_recall_list
-            variable=i
-            [do]
-                [unstore_unit]
-                    variable=rastabahn_recall_list[$i]
-                [/unstore_unit]
-            [/do]
-        [/for]
+        # Merge Ras-Tabahn's side into Ardonna's
+        {MODIFY_UNIT (side=2) side 1}
         [gold]
             side=1
             amount=$rastabahn_gold
@@ -75,7 +78,7 @@ I never would have been able to escape the trees without ghosts. They had proven
         [/foreach]
 
         [clear_variable]
-            name=rastabahn_gold, rastabahn_recall_list, rastabahn_zombies, rastabahn_zombie_array
+            name=rastabahn_gold, rastabahn_zombies, rastabahn_zombie_array
         [/clear_variable]
 
         # Only one Shynal will be recalled.
@@ -90,10 +93,6 @@ I never would have been able to escape the trees without ghosts. They had proven
         [recall]
             id=Carcyn
             x,y=14,3
-        [/recall]
-        [recall]
-            id=Ras-Tabahn
-            x,y=14,2
         [/recall]
         [modify_unit]
             [filter]
