SotA: Have Ardonna & Shynal profiles handled by objects instead of events

--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -310,59 +310,6 @@
     [/event]
 #enddef
 
-# Ardonna is a normal unit, but uses mostly custom portraits. These events cause the
-# portrait to change as necessary. The profile event is called automatically by the
-# post_advance event or can be called manually. This macro is included in every scenario.
-#define MANAGE_PROFILE
-    [event]
-        name=post_advance
-        first_time_only=no
-        [filter]
-            id=Ardonna
-        [/filter]
-
-        [fire_event]
-            name=ardonna_profile
-        [/fire_event]
-    [/event]
-
-    [event]
-        name=ardonna_profile
-        first_time_only=no
-
-        [store_unit]
-            [filter]
-                id=Ardonna
-            [/filter]
-            variable=Ardonna_stored
-        [/store_unit]
-        [switch]
-            variable=Ardonna_stored.type
-            [case]
-                value=SotA Necromancer
-                [set_variable]
-                    name=Ardonna_stored.profile
-                    value="portraits/humans/necromancer+female.png"
-                [/set_variable]
-            [/case]
-            [case]
-                value=SotA Lich, SotA Ancient Lich
-                [set_variable]
-                    name=Ardonna_stored.profile
-                    value="portraits/ardonna-lich.png"
-                [/set_variable]
-            [/case]
-            # Other values should not change it from "profile=portraits/ardonna.png"
-        [/switch]
-        [unstore_unit]
-            variable=Ardonna_stored
-        [/unstore_unit]
-        [clear_variable]
-            name=Ardonna_stored
-        [/clear_variable]
-    [/event]
-#enddef
-
 # If one of the two kids is advanced to something other than a Dark Adept, they complain.
 # The player is given the choice to reconsider. They say something about being very
 # powerful which may clue the player in to the fact that they can become Ancient Liches,
@@ -386,63 +333,6 @@
                         id=$unit.id
                     [/primary_unit]
                 [/fire_event]
-            [/then]
-        [/if]
-
-        [if]
-            # Shynal uses a couple custom portraits. We manage them here.
-            [variable]
-                name=unit.id
-                equals=Shynal
-            [/variable]
-            [then]
-                [store_unit]
-                    # Her type may have just changed, so we will store a fresh
-                    # copy of the unit.
-                    [filter]
-                        id=$unit.id
-                    [/filter]
-                    variable=Shynal_stored
-                [/store_unit]
-                [switch]
-                    variable=Shynal_stored.type
-                    [case]
-                        value=SotA Dark Adept, Dark Adept, SotA Dark Sorcerer, Dark Sorcerer
-                        [set_variable]
-                            name=Shynal_stored.profile
-                            value="portraits/shynal-adept.png"
-                        [/set_variable]
-                    [/case]
-                    [case]
-                        value=SotA Necromancer, Necromancer
-                        [set_variable]
-                            name=Shynal_stored.profile
-                            value="portraits/humans/necromancer+female.png"
-                        [/set_variable]
-                    [/case]
-                    [case]
-                        value=Lich
-                        [set_variable]
-                            name=Shynal_stored.profile
-                            value="portraits/lich.png"
-                        [/set_variable]
-                    [/case]
-                    [case]
-                        value=Ancient Lich
-                        [set_variable]
-                            name=Shynal_stored.profile
-                            value="portraits/brown-lich.png"
-                        [/set_variable]
-                    [/case]
-                    # Other values should not change it from its original
-                    # outlaw-themed value.
-                [/switch]
-                [unstore_unit]
-                    variable=Shynal_stored
-                [/unstore_unit]
-                [clear_variable]
-                    name=Shynal_stored
-                [/clear_variable]
             [/then]
         [/if]
     [/event]
@@ -875,6 +765,11 @@
                 [insert_tag]
                     name=trait
                     variable=stored_necromancer.modifications.trait[1]
+                [/insert_tag]
+                # Ardonna & Shynal have an object handling their portraits, so copy that as well
+                [insert_tag]
+                    name=object
+                    variable=stored_necromancer.modifications.object[0]
                 [/insert_tag]
             [/modifications]
 
