--- a/data/campaigns/Secrets_of_the_Ancients/utils/characters.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/characters.cfg
@@ -5,12 +5,34 @@
     type=SotA Dark Adept
     id=Ardonna
     name= _ "Ardonna"
-    profile=portraits/ardonna.png
     gender=female
     canrecruit=yes
     [modifications]
         {TRAIT_QUICK}
         {TRAIT_RESILIENT}
+        [object]
+            # Ardonna is a normal unit, but uses mostly custom portraits.
+            # This object handles the necessary changes.
+            [effect]
+                # Default portrait, only overridden if any below are applied.
+                apply_to=profile
+                portrait="portraits/ardonna.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=SotA Necromancer
+                [/filter]
+                apply_to=profile
+                portrait="portraits/humans/necromancer+female.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=SotA Lich, SotA Ancient Lich
+                [/filter]
+                apply_to=profile
+                portrait="portraits/ardonna-lich.png"
+            [/effect]
+        [/object]
     [/modifications]
 #enddef
 
@@ -52,12 +74,49 @@
     type=Delinquent
     id=Shynal
     name= _ "Shynal"
-    profile="portraits/shynal-outlaw.png"
     gender=female
     {IS_LOYAL}
     [modifications]
         {TRAIT_LOYAL}
         {TRAIT_RESILIENT}
+        [object]
+            # Shynal uses a couple custom portraits.
+            # This object handles the necessary changes.
+            [effect]
+                # Default portrait, only overridden if any below are applied.
+                # Has outlaw theme if not advanced to dark adept.
+                apply_to=profile
+                portrait="portraits/shynal-outlaw.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=SotA Dark Adept, Dark Adept, SotA Dark Sorcerer, Dark Sorcerer
+                [/filter]
+                apply_to=profile
+                portrait="portraits/shynal-adept.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=SotA Necromancer, Necromancer
+                [/filter]
+                apply_to=profile
+                portrait="portraits/humans/necromancer+female.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=Lich
+                [/filter]
+                apply_to=profile
+                portrait="portraits/lich.png"
+            [/effect]
+            [effect]
+                [filter]
+                    type=Ancient Lich
+                [/filter]
+                apply_to=profile
+                portrait="portraits/brown-lich.png"
+            [/effect]
+        [/object]
     [/modifications]
 #enddef
 
