THoT S12: After breaking down a door or teleporting, clear the shroud if needed
Otherwise the shroud doesn't update until the unit moves again.  When
teleporting that could lead to the unit being stuck in a shrouded location,
although that's unlike to happen except when running around the map using debug
commands.

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/09_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/09_The_Underlevels.cfg
@@ -485,7 +485,10 @@
             y=18,19
             terrain=Ur^Pr/o
         [/terrain]
-        [redraw][/redraw]
+        [redraw]
+            clear_shroud=yes
+            side=1
+        [/redraw]
 
         [delay]
             time=1000
@@ -551,7 +554,10 @@
             x,y=43,6
             terrain=Ur^Pr/o
         [/terrain]
-        [redraw][/redraw]
+        [redraw]
+            clear_shroud=yes
+            side=1
+        [/redraw]
     [/event]
 
     [event]
@@ -583,7 +589,10 @@
             x,y=41,37
             terrain=Ur^Pr\o
         [/terrain]
-        [redraw][/redraw]
+        [redraw]
+            clear_shroud=yes
+            side=1
+        [/redraw]
     [/event]
 
     #########################################################################################
@@ -809,6 +818,11 @@
         [kill]
             x,y=$x1,$y1
         [/kill]
+
+        [redraw]
+            clear_shroud=yes
+            side=1
+        [/redraw]
     [/event]
 
     [event]
@@ -970,6 +984,11 @@
         [kill]
             x,y=$x1,$y1
         [/kill]
+
+        [redraw]
+            clear_shroud=yes
+            side=1
+        [/redraw]
     [/event]
 
     [event]
