--- a/data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg
+++ b/data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg
@@ -308,7 +308,7 @@
         [/filter]
         [filter_condition]
             [have_unit]
-                id="Li’sar"
+                id="Li'sar"
             [/have_unit]
             [have_location]
                 x,y=$x1,$y1
@@ -347,7 +347,7 @@
         [/filter]
         [filter_condition]
             [have_unit]
-                id="Li’sar"
+                id="Li'sar"
             [/have_unit]
             [have_location]
                 x,y=$x1,$y1
