SotA: Fix some wmllint warnings by adding "wmllint: who" commands

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -111,7 +111,7 @@ With further observation, I have determined that this is probably not the way to
     {TURNS 20 20 20}
 
     [side]
-        # wmllint: who SIDE_1_ARDONNA is Ardonna
+        # wmllint: who SIDE_1_ARDONNA_EARLY is Ardonna
         {SIDE_1_ARDONNA_EARLY}
         facing=se
         {GOLD 15 5 0}
