--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/04_Becalmed.cfg
@@ -607,6 +607,7 @@ The journey started well enough, but on the dawn following our departure, the wi
             kill=yes
         [/store_unit]
         [unit]
+            # wmllint: who RECALL_LOYAL_UNITS is Bone Captain
             type=Bone Captain
             id=Bone Captain
             side=1
