--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/08_Carcyn.cfg
@@ -45,6 +45,7 @@ After several days of travel, he approached the frontier town of Carcyn."
 
     [side]
         # wmllint: who SIDE_1_RAS-TABAHN is Ras-Tabahn
+        # wmllint: unwho RECALL_LOYAL_UNITS
         {SIDE_1_RAS-TABAHN}
         {GOLD 200 200 200}
     [/side]
