--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -114,6 +114,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
             [/gold_carryover]
         [/objectives]
 
+        # wmllint: who RECALL_LOYAL_UNITS is Bone Captain
         {RECALL_LOYAL_UNITS}
     [/event]
 
@@ -194,6 +195,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
         [/move_unit_fake]
 
         [unit]
+            # wmllint: who RECALL_LOYAL_UNITS is Vendraxis
             name= _ "Vendraxis"
             id=Vendraxis
             type=Saurian Soothsayer
