--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/02_Dark_Business.cfg
@@ -219,6 +219,7 @@ I decided to hide in the cemetery. That way I could try my experiment to animate
         [/modifications]
     [/unit]
 #enddef
+# wmllint: whofield PLACE_GUARD 6
 
     # *************************** PRESTART ***************************
     [event]
@@ -616,6 +617,7 @@ of Healing"
             name=location
         [/clear_variable]
 #enddef
+# wmllint: whofield MOVE_AND_PLACE_GUARD 3
 
     [event]
         name=guards_emerge
@@ -927,6 +929,7 @@ Well, I might as well do my experiment and worry about leaving later."
     {HERO_DEATHS}
     {MANAGE_PROFILE}
 
+# wmllint: whofield clear PLACE_GUARD MOVE_AND_PLACE_GUARD
 #undef PLACE_GUARD
 #undef MOVE_AND_PLACE_GUARD
 #undef SET_MENU_ITEM_FOR
