--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/14_Entering_the_Northlands.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/14_Entering_the_Northlands.cfg
@@ -38,7 +38,10 @@ We reached the Ford of Abez as the dawn light spread behind the mountain peaks t
     {TURNS 36 35 34}
 
     [side]
+        # wmllint: unwho SIDE_1_ARDONNA
+        # wmllint: unwho SIDE_1_RAS-TABAHN
         # wmllint: who SIDE_1_BOTH is Ardonna,Ras-Tabahn
+        # wmllint: who RECALL_LOYAL_UNITS is Bone Captain, Vendraxis, Shynal, Carcyn
         {SIDE_1_BOTH}
         {GOLD 170 170 170}
     [/side]
