--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -57,6 +57,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Gwendir
         side=2
         controller=ai
         user_team_name= _ "Cavalry"
@@ -69,6 +70,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Fizztsars
         side=3
         controller=ai
         user_team_name= _ "Saurians"
@@ -86,6 +88,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Thrigalurd
         side=4
         controller=ai
         user_team_name= _ "Dwarves"
@@ -99,6 +102,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Carmyna
         side=5
         controller=ai
         user_team_name= _ "Magi"
@@ -112,6 +116,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Isthiniel
         side=6
         controller=ai
         user_team_name= _ "Elves"
@@ -125,6 +130,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Mauapan
         side=7
         controller=ai
         user_team_name= _ "Merfolk"
@@ -149,6 +155,7 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
     [/side]
 
     [side]
+        # wmllint: recognize Taxtrimon
         side=8
         controller=ai
         user_team_name= _ "Nagas"
