--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg
@@ -51,4 +51,6 @@ We prevailed today on the field, but our victory was somewhat bitter. <i>Everyon
     [side]
         {SIDE_1_BOTH}
     [/side]
+
+    # wmllint: unwho ALL
 [/scenario]
