SotA: Fix some wmllint warnings by adding "wmllint: who" commands

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/06_Following_the_Shadow.cfg
@@ -59,6 +59,8 @@ I was so sure I had the answer! I was wrong. I wanted to believe that I was imag
 #enddef
 
     [side]
+        # wmllint: unwho SIDE_1_ARDONNA_EARLY
+        # wmllint: who SIDE_1_ARDONNA is Ardonna
         {SIDE_1_ARDONNA}
         {ARDONNA_RECRUIT_3}
         {GOLD 200 175 150}
