--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -119,6 +119,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
             name=ardonna_zombies
         [/clear_variable]
 
+        # wmllint: who RECALL_LOYAL_UNITS is Bone Captain
         {RECALL_LOYAL_UNITS}
     [/event]
 
