--- a/data/core/units/undead/Corpse_Soulless.cfg
+++ b/data/core/units/undead/Corpse_Soulless.cfg
@@ -136,7 +136,7 @@
         variation_id=mounted
         variation_name= _ "wc_variation^Mounted"
         inherit=yes
-        # Default portrait is fine for Mounted
+        profile=portraits/undead/zombie-rider.png
         {UNIT_BODY_SOULLESS_STATS    mounted 5 33}
         {UNIT_BODY_SOULLESS_GRAPHICS soulless-mounted}
         description= _ "The technique of animating a dead body is unfortunately well-known in the dark arts; practitioners often use it to raise servants and soldiers from unwilling corpses. These shamblers are often numerous, but fragile; a touch of combat can waken them, though, making them far more formidable."+{SPECIAL_NOTES}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_DEFENSE_CAP}
