--- a/data/core/units/undead/Corpse_Walking.cfg
+++ b/data/core/units/undead/Corpse_Walking.cfg
@@ -151,7 +151,7 @@
         variation_id=mounted
         variation_name= _ "wc_variation^Mounted"
         inherit=yes
-        # Default portrait is fine for Mounted
+        profile=portraits/undead/zombie-rider.png
         {UNIT_BODY_WALKING_CORPSE_STATS    mounted 5 21}
         {UNIT_BODY_WALKING_CORPSE_GRAPHICS zombie-mounted}
         description= _ "Walking Corpses are the bodies of the dead, re-animated by dark magic. Though not especially dangerous to a trained soldier, the sight of one’s former comrades amongst their number is frightening to say the least."+{SPECIAL_NOTES}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_DEFENSE_CAP}
