SotA: Death dialog for Vendraxis

--- a/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/utils/sota-utils.cfg
@@ -300,6 +300,58 @@
     [event]
         name=last_breath
         [filter]
+            id=Vendraxis
+        [/filter]
+        [message]
+            speaker=Vendraxis
+            message= _ "Now I will never learn the sssecret of exssstending my ssspan." # no spellcheck
+        [/message]
+    [/event]
+
+    [event]
+        name=die
+        [filter]
+            id=Vendraxis
+        [/filter]
+        [if]
+            [have_unit]
+                id=Carcyn
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Carcyn
+                    message= _ "I'm going to miss him."
+                [/message]
+            [/then]
+            [else]
+                [message]
+                    speaker=Ras-Tabahn
+                    message= _ "Unfortunate. He was useful."
+                [/message]
+            [/else]
+        [/if]
+        [if]
+            [have_unit]
+                id=Shynal
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Shynal
+                    message= _ "Yes, he was helpful."
+                [/message]
+            [/then]
+            [else]
+                [message]
+                    speaker=Ardonna
+                    message= _ "Indeed, he will be missed."
+                [/message]
+            [/else]
+        [/if]
+    [/event]
+
+    [event]
+        name=last_breath
+        [filter]
             # Not actually a hero, but it fits here better than anywhere else.
             race=bats
         [/filter]
