SotA: Some dialog for Vendraxis

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/15_Mountain_Pass.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/15_Mountain_Pass.cfg
@@ -351,6 +351,17 @@ We have reached a pass through the mountains that Ras-Tabahn knew of. The air is
             speaker=Ras-Tabahn
             message= _ "Gryphons... live at this height. We should be cautious."
         [/message]
+        [if]
+            [have_unit]
+                id=Vendraxis
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Vendraxis
+                    message= _ "Yesss. The danger I sssensed is here." # no spellcheck
+                [/message]
+            [/then]
+        [/if]
     [/event]
 
     [event]
