--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/21_Against_the_World.cfg
@@ -581,6 +581,21 @@ We finally made it out of the mountains. We crossed the Ford of Abez late this m
             speaker=Taxtrimon
             message= _ "Well met Fizztsars. Now these creatures will certainly fall."
         [/message]
+        [if]
+            [have_unit]
+                id=Vendraxis
+            [/have_unit]
+            [then]
+                [message]
+                    speaker=Fizztsars
+                    message= _ "Except for the male of oursss with them. He will come with usss." # no spellcheck
+                [/message]
+                [message]
+                    speaker=Vendraxis
+                    message= _ "No! I will not return yet, I still have sssecrets to learn!" # no spellcheck
+                [/message]
+            [/then]
+        [/if]
         [modify_side]
             side=3
             hidden=no
