DM: Remove unnecessary lines and some comment cleanup

--- a/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg
@@ -4,7 +4,6 @@
     id=01_Overture
     next_scenario=02_This_Valley_Belongs_to_Me
     {MEMOIRS_MAP 01_Overture.map}
-    turns=1
     theme=Cutscene_Minimal
     {MORNING}
 
@@ -221,7 +220,7 @@
             message=_"I am ready."
         [/message]
 
-        # Using separate tags to insure Methor moves first
+        # Using separate tags to ensure Methor moves first
         [move_unit]
             id=Methor
             to_x=13,14,15,16,17,18,19,20
@@ -240,8 +239,6 @@
             result=victory
             linger_mode=no
             carryover_report=no
-
-            #result=continue
         [/endlevel]
     [/event]
 [/scenario]
