Added '/utf-8' character set option to Visual Studio project file
Fixed bug where Visual Studio would incorrectly interpret non-breaking
space characters, leading to being unable to open the unit help window.

Visual studio documentation here: https://docs.microsoft.com/en-us/cpp/build/reference/utf-8-set-source-and-executable-character-sets-to-utf-8?view=vs-2015

--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1481,6 +1481,9 @@
     [entry]
         name = "newfrenchy88"
     [/entry]
+	[entry]
+		name = "Niall Burton (Leonard03)"
+	[/entry]
     [entry]
         name = "niegenug"
     [/entry]
